--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "dependencies": {
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
-    "react-scripts": "2.1.8"
+    "react-resize-detector": "^4.0.5",
+    "react-scripts": "2.1.8",
+    "react-textarea-autosize": "^7.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
