--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "node-sass": "^4.11.0",
-    "react": "^16.8.4",
+    "node-sass": "^4.12.0",
+    "react": "^16.8.6",
     "react-copy-to-clipboard": "^5.0.1",
-    "react-dom": "^16.8.4",
-    "react-resize-detector": "^4.0.5",
-    "react-scripts": "2.1.8",
+    "react-dom": "^16.8.6",
+    "react-resize-detector": "^4.2.0",
+    "react-scripts": "^3.0.1",
     "react-textarea-autosize": "^7.1.0"
   },
   "scripts": {
